--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,30 +7,19 @@
         <artifactId>cloud</artifactId>
         <version>1.0.0</version>
     </parent>
-    <groupId>com.rockeycui.register</groupId>
-    <artifactId>register</artifactId>
+    <artifactId>common</artifactId>
     <version>1.0.0</version>
-    <name>register</name>
+    <name>common</name>
     <description>Demo project for Spring Boot</description>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-        <!--<dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-        </dependency>-->
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -39,4 +28,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
