--- a/confsvr/pom.xml
+++ b/confsvr/pom.xml
@@ -7,10 +7,9 @@
         <artifactId>cloud</artifactId>
         <version>1.0.0</version>
     </parent>
-    <groupId>com.rockeycui.register</groupId>
-    <artifactId>register</artifactId>
+    <artifactId>confsvr</artifactId>
     <version>1.0.0</version>
-    <name>register</name>
+    <name>confsvr</name>
     <description>Demo project for Spring Boot</description>
 
     <dependencies>
@@ -20,17 +19,20 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-        <!--<dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-        </dependency>-->
+            <artifactId>spring-cloud-config-server</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
