--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,10 @@
         <module>common</module>
         <module>backend</module>
         <module>register</module>
+        <module>gateway</module>
         <module>confsvr</module>
-        <module>usercenter</module>
+        <module>usercenter-parent/usercenter</module>
+        <module>usercenter-parent/usercenter-api</module>
     </modules>
 
 
@@ -45,6 +47,11 @@
             <dependency>
                 <groupId>com.rockeycui.learn</groupId>
                 <artifactId>common</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.rockeycui.learn</groupId>
+                <artifactId>usercenter-api</artifactId>
                 <version>1.0.0</version>
             </dependency>
 
@@ -91,6 +98,11 @@
             <!--spring boot-->
 
             <!--第三方-->
+            <!-- <dependency>
+                 <groupId>com.netflix.hystrix</groupId>
+                 <artifactId>hystrix-javanica</artifactId>
+                 <version>1.5.9</version>
+             </dependency>-->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
@@ -142,6 +154,23 @@
                 <artifactId>json-lib</artifactId>
                 <version>2.4</version>
                 <classifier>jdk15</classifier>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client</artifactId>
+                <version>4.3.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-common</artifactId>
+                <version>4.3.0</version>
+                <!--<exclusions>
+                    <exclusion>
+                        <groupId>io.netty</groupId>
+                        <artifactId>netty-all</artifactId>
+                    </exclusion>
+                </exclusions>-->
             </dependency>
         </dependencies>
     </dependencyManagement>
