分布式日志追踪

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -34,6 +34,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.rockeycui.learn</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
