--- a/usercenter-parent/usercenter-api/pom.xml
+++ b/usercenter-parent/usercenter-api/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>usercenter-parent</artifactId>
+        <artifactId>cloud</artifactId>
         <groupId>com.rockeycui.learn</groupId>
         <version>1.0.0</version>
     </parent>
